style.css
/*
PURPLE: #A16CAE
TEAL: #388FC3
GREEN: #89C97F
ORANGE: #F5755C
Icons from http://entypo.com/
*/


/* --- MAIN AND BACKGROUND STYLES --- */

@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');


html, body {
  height: 100vh;
  width: 100vw;
  margin: 0;
  padding: 0;
  background: #eee;
  color: #111;
  position: relative;
  overflow:  hidden;
  font-family: 'Montserrat', sans-serif;
  font-size: 16px;
  line-height: 1.6;
  }

p {
  margin: 0 0 1em 0;
}

h1 {
  display: none;
}

h2 {
  font-size: 24px;
  font-weight: 300;
  text-transform: uppercase;
  color: #388FC3;
}

a {
  color: #111;
  transition: color 0.6s;
}

a:hover {
  color: #ff8d77;
  text-decoration: underline;
}

main {
  height: 100vh;
  width: 100vw;
  overflow:hidden;
  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#388fc3+0,a16cae+100 */
  background: #388fc3; /* Old browsers */
  background: -moz-linear-gradient(45deg,  #388fc3 0%, #a16cae 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(45deg,  #388fc3 0%,#a16cae 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(45deg,  #388fc3 0%,#a16cae 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#388fc3', endColorstr='#a16cae',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
}

#ngp {
  position: absolute;
  z-index: 1;
  top: 55%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 120vh;
  opacity: 0;
  animation: ngpfadein;
  animation-timing-function: cubic-gier(.2,.42,.1,.95);
  animation-duration: 5s;
  animation-fill-mode: forwards;
}

@media (max-width: 768px) {
  #ngp {
    width: 180vh;
    transform: translate(-50%, -50%) rotate(-90deg);
  }
}


@keyframes ngpfadein {
  0 {
    opacity: 0;
    height: 120vh;
  }
  100% {
    opacity: 0.05;
    height: 150vh;
  }
}

/* --- SECTION STYLES --- */

section {
  box-sizing: border-box;
  height: 100vh;
  width: 100vw;
  top: 0;
  padding: 50px;
  position: absolute;
  z-index: 2;
  display: -webkit-box;
  display: -ms-flexbox;
    display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
    flex-direction: column;
  -webkit-box-align: center;
  -ms-flex-align: center;
    align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
    justify-content: center;
}

@media (max-width: 768px) {
  section {
    padding: 30px 30px 30px 20px;
  }
}

@media (max-width: 620px) {
  section {
    padding: 0px 10px 10px 20px;
  }
}

.section-border {
  position: absolute;
  left: -40px;
  height: 100%;
  width: 40px;
}

@media (max-width: 620px) {
  .section-border {
    left: 0;
    height: 40px;
    width: 100%;
    top: -40px;
  }
}


.section-border-top {
  background: #fff;
  width: 40px;
  position: absolute;
  top: 0;
  left: 0;
  height: calc(10% + 29px);
  box-shadow: -6px -6px 6px rgba(0, 0, 0, 0.12);
  z-index: 3;
}

@media (max-width: 620px) {
  .section-border-top {
    height: 40px;
    width: calc(20% + 29px);
  }
}

.section-border-circle {
  border-radius: 50%;
  background:radial-gradient(circle at 0px 55px,transparent 25px,white 26px);
  height: 110px;
  width: 40px;
  position: absolute;
  z-index: 2;
  top: 10%;
  left: 0px;
}

@media (max-width: 620px) {
  .section-border-circle {
    background:radial-gradient(circle at 55px 0px,transparent 25px,white 26px);
    height: 40px;
    width: 110px;
    top: 0;
    left: 20%;
  }
}
.section-border-circle::before {
  content: "";
  z-index: 1;
  background: transparent;
  width: 52px;
  height: 52PX;
  position: absolute;
  top: calc(10% + 18px);
  left: -26px;
  border-radius: 100%;
  box-shadow: inset -6px 0px 3px rgba(0, 0 ,0 ,0.1);
}

@media (max-width: 620px) {
  .section-border-circle::before {
    left: calc(10% + 18px);
    top: -26px;
    box-shadow: inset 0px -6px 3px rgba(0, 0 ,0 ,0.1);
  }
}

.section-border-circle::after {
  position: absolute;
  z-index: 4;
  content: "";
  background: #fff;
  width: 15px;
  height: 68px;
  left: 30px;
  top: 20%;
}

@media (max-width: 620px) {
  .section-border-circle::after {
    height: 15px;
    width: 68px;
    top: 30px;
    left: 20%;
  }
}

.section-border-bottom {
  background: #fff;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: 0;
  height: calc(90% - 81px);
  box-shadow: -6px 6px 6px rgba(0, 0, 0, 0.12);
  z-index: 3;
}

@media (max-width: 620px) {
  .section-border-bottom {
    bottom: auto;
    left: auto;
    top: 0;
    right: 0;
    height: 40px;
    width: calc(80% - 81px);
    box-shadow: 6px -6px 6px rgba(0, 0, 0, 0.12);

  }
}

.section-border-icon {
  position: absolute;
  z-index: 5;
  left: -11px;
  top: calc(10% + 43px);
  height: 22px;
  width: 22px;
}

@media (max-width: 620px) {
  .section-border-icon {
    top: -11px;
    left: calc(20% + 43px);
  }
}

.section-open-enter-active,
.section-open-leave-active  {
  transition: transform 1s;
  transition-timing-function: cubic-bezier(.29,.01,.77,.97);
}

.section-open-enter,
.section-open-leave-to {
  transform: translateX(110%);
}

@media (max-width: 620px) {
  .section-open-enter,
  .section-open-leave-to {
    transform: translateY(110%);
  }
}


.section-content {
  max-height: 90vh;
  overflow-y: scroll;
  scrollbar-width: thin;
  scrollbar-color: #1111110d #ffffff;
}

.section-content::-webkit-scrollbar {
  width: 23px;
}
.section-content::-webkit-scrollbar-track {
  background: transparent;
}
.section-content::-webkit-scrollbar-thumb {
  background-color: #1111110d;
  border-radius: 3px;
  border-left: 20px solid #ffffff;
}

/* --- BUTTON STYLES --- */

button {
  background: none;
  border: none;
  padding: 0;
  margin: 0;
  cursor: pointer;
}

button:focus {
  outline: none;
  /* TODO: ADD FOCUS STYLES!!!! */
}

.inset {
  box-shadow: inset -3px 0px 3px rgba(0,0,0,0.1), -3px 0px 3px 0px rgba(255, 255, 255, 0.1);
}

.close {
  position: absolute;
  top: 60px;
  right: 60px;
}

.close img {
  width: 35px;
  height: 35px;
}

#back-home {
  z-index: 2;
  position: absolute;
  top: 20px;
  left: 20px;
  background: transparent;
  padding: 10px;
  border-radius: 100%;
}

#back-home img {
  width: 26px;
  height: 26px;
  display: block;
}

.home-fadein-enter-active {
  transition: opacity 0.3s ease-in;
  transition-delay: 0.7s;
}

.home-fadein-leave-active  {
  transition: opacity 0.3s ease-out;
}

.home-fadein-enter,
.home-fadein-leave-to {
  opacity: 0;
}



/* --- INTRO SECTION --- */


section#intro {
}

#logo {
  width: 90vw;
  max-width: 550px;
  height: auto;
  opacity: 0;
  animation: fadein;
  animation-duration: 2s;
  animation-delay: 0.5s;
  animation-fill-mode: forwards;
  z-index: 2;
}

@keyframes fadein {
  0 {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

#toggle-about {
  z-index: 2;
  position: relative;
  bottom: -75px;
  opacity: 0;
  animation: fadein;
  animation-duration: 1s;
  animation-delay: 1.5s;
  animation-fill-mode: forwards;
  background: transparent;
  padding: 10px;
  border-radius: 100%;
}

#toggle-about img {
  width: 35px;
  height: 35px;
  display: block;
}

/* --- ABOUT SECTION --- */


section#about {
  z-index: 2;
  background: #fff;
  width: 80%;
  margin-left: 20%;
  -webkit-box-align: start;
  -ms-flex-align: start;
    align-items: flex-start;
}

@media (max-width: 620px) {
  section#about {
    width: 100%;
    margin-left: 0;
    height: calc(100% - 126px); /* 86px space + 40px border */
    margin-top: 126px;
  }
}

.funfact {
  position: relative;
  animation: blink 20s infinite;
}

.funfact:nth-of-type(1) {
  animation-delay: 1.2s;
}
.funfact:nth-of-type(2) {
  animation-delay: 0.3s;
}
.funfact:nth-of-type(3) {
  animation-delay: 0s;
}
.funfact:nth-of-type(4) {
  animation-delay: 0.9s;
}
.funfact:nth-of-type(5) {
  animation-delay: 1.5s;
}
.funfact:nth-of-type(6) {
  animation-delay: 0.6s;
}
.funfact .tooltip {
  display: none;
  position: absolute;
  bottom: 25px;
  left: -55px;
  background: #ffffff;
  padding: 6px;
  box-shadow: -2px 2px 3px 2px rgba(0, 0, 0, 0.12);
}

.funfact:hover .tooltip {
  display: block;
}

.funfact .tooltip img {
  height: 150px;
  width: 150px;
  display: block;
}

@keyframes blink {
  0 {
    color: #111;
  }
  48% {
    color: #111;
  }
  50% {
    color: #89C97F;
  }
  52% {
    color: #111;
  }
  100% {
    color: #111;
  }
}


aside#social {
  position: absolute;
  left: 20px;
  bottom: 20px;
  padding: 10px;
  border-radius: 46px;
  z-index: 999;
}

@media (max-width: 620px) {
  aside#social {
    left: auto;
    bottom: auto;
    top: 20px;
    right: 20px;
  }
}

aside#social img {
  height: 26px;
  width: 26px;
  display: block;
  margin-bottom: 10px;
}

@media (max-width: 620px) {
  aside#social img {
    float: left;
    margin-bottom: 0;
    margin-right: 10px;
  }
}

aside#social a:last-of-type img {
  margin-bottom: 0;
  margin-right: 0;
}

.social-fadein-enter-active {
  transition: opacity 0.3s ease-in;
  transition-delay: 1.1s;
}

.social-fadein-leave-active  {
  transition: opacity 0.3s ease-out;
}

.social-fadein-enter,
.social-fadein-leave-to {
  opacity: 0;
}

